ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: rewrite
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "khanh.tma"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-k8s
                port:
                  number: 8080
